<resources>
    <string name="app_name">SkinMate</string>
    <string name="splash_screen_text">Perfect Skin Match With SkinMate</string>
    <string name="read_more">Read More</string>
    <string name="nama">Nama</string>
    <string name="passwordValid">Password must be more than 8</string>
    <string name="jenis_kulit">Jenis Kulit</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="artikel">Artikel</string>
    <string name="recent_scan">Recent Scan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="tidak_punya_akun">Tidak Punya Akun? Daftar</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="slogan"> Perfect Skin Match with \n SkinMate</string>
    <string name="title_scan">Scan</string>
    <string name="title_home">Home</string>
    <string name="profil">Profil</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_failed">"Login failed"</string>
    <string name="capture">"Capture"</string>
    <string name="flip">"Flip"</string>
    <string name="addimage">"Add Image"</string>
    <string name="failed_showing_camera">Failed Show Camera</string>
    <string name="failed_pick_image">Failed Pick Image</string>
    <string name="apa_jenis_kulit_anda">Apa jenis kulit Anda?</string>
    <string name="berminyak">Berminyak</string>
    <string name="kering">Kering</string>
    <string name="normal">Normal</string>
    <string name="kombinasi">Kombinasi</string>
    <string name="img_berminyak">berminyak</string>
    <string name="img_kering">Kering</string>
    <string name="img_normal">Normal</string>
    <string name="img_kombinasi">Kombinasi</string>
    <string name="image_scan">Scan Image</string>
    <string name="image_desc">artikel</string>
    <string name="reminder">reminder</string>
    <string name="recommended_products_title">recommended product</string>
</resources>