<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header1"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:textSize="25sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/apa_jenis_kulit_anda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/selanjutnya"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        app:layout_editor_absoluteX="40dp"
        app:layout_editor_absoluteY="120dp">

        <RelativeLayout
            android:id="@+id/item_berminyak"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_row="0"
            android:layout_column="0">

            <ImageView
                android:id="@+id/img_berminyak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/berminyak"
                android:focusable="true"
                android:contentDescription="@string/img_berminyak" />

            <TextView
                android:id="@+id/txt_berminyak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/berminyak" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_kering"
            android:layout_width="wrap_content"
            android:layout_height="190dp">

            <ImageView
                android:id="@+id/img_kering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/kering"
                android:focusable="true"
                android:contentDescription="@string/img_kering" />

            <TextView
                android:id="@+id/txt_kering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/kering" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_normal"
            android:layout_width="wrap_content"
            android:layout_height="191dp">

            <ImageView
                android:id="@+id/img_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/normal"
                android:focusable="true"
                android:contentDescription="@string/img_normal" />

            <TextView
                android:id="@+id/txt_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/normal" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_kombinasi"
            android:layout_width="wrap_content"
            android:layout_height="191dp">

            <ImageView
                android:id="@+id/img_kombinasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/kombinasi"
                android:focusable="true"
                android:contentDescription="@string/img_kombinasi" />

            <TextView
                android:id="@+id/txt_kombinasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/kombinasi" />

        </RelativeLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>