<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name=".CameraActivity"
    android:label="Camera Activity" >

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/capture_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_shoot"
        app:tint="@color/pink_500" />

    <ImageView
        android:id="@+id/switch_camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/flip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/capture_image"
        app:srcCompat="@drawable/ic_flip_camera"
        app:tint="@color/pink_500" />

    <ImageView
        android:id="@+id/add_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/addimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_add_image"
        app:tint="@color/pink_500" />
</androidx.constraintlayout.widget.ConstraintLayout>