<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kdt.skinmate.data.ui.login.LoginFragment">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@drawable/logo_skinmate"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/slogan"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/brown_600"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_login" />

    <com.kdt.skinmate.data.ui.myview.EditTextEmail
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="80dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_slogan"/>

    <com.kdt.skinmate.data.ui.myview.EditTextPass
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/password"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/pink_500"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/brown_600"
        android:text="@string/tidak_punya_akun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>